Resolves: tdf#99286 for jpeg dpi use apis that know about MapUnit::MapPixel

move the code which can do this from sw to vcl

Change-Id: I9940fb80ecdbfe8f70afc500c691288ed0993701